logs/turtlesim/build.make.156.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp: In member function ‘virtual void turtlesim::TurtleFrame::paintEvent(QPaintEvent*)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:222:16: error: ‘painter2’ was not declared in this scope
   QFont font = painter2.font();
                ^~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:222:16: note: suggested alternative: ‘painters’
   QFont font = painter2.font();
                ^~~~~~~~
                painters
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle_frame.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
